# Top-level Cargo.toml
[workspace]
resolver = "2"
members = [
    "mfl_manager",         # Binary
    "mfl_manager_lib",     # New Library
    "integration_test",    # Test Crate
]

# Optional: Define workspace dependencies to keep versions consistent
# [workspace.dependencies]
# actix-web = "4"
# serde = "1.0"
# ...